--- a/motos/package.json
+++ b/motos/package.json
@@ -40,6 +40,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "jest-circus": "^29.5.0",
+    "jest-extended": "^4.0.0"
   }
 }
